--- a/style.css
+++ b/style.css
@@ -15,12 +15,14 @@ body {
     max-width: 500px;
     margin: 0 auto;
     padding: 3em 2em;
+    text-align: center;
     position: absolute;
     transform: translateX(-50%);
     left: 50%;
     right: 50%;
     top: 1em;
     border-radius: 1em;
+    padding-bottom: 5px;
 }
 
 #input-box {
@@ -43,4 +45,50 @@ button{
     background-color: red;
     color: white;
     border-radius: 0.5em;
+}
+
+.display-container {
+    padding: 1em ;
+}
+.container-character-image {
+    background-color: white;
+    padding: 0.5em;
+    height: 9.5em;
+    width: 9.5em;
+    display: block;
+    margin: auto;
+    border-radius: 50%;
+
+}
+
+.card-container {
+    margin-top: 1em;
+}
+
+.container-character-image img {
+    width: 100%;
+    position: relative;
+    width: block;
+    border-radius: 50%;
+}
+
+.character-name {
+    padding: 0.5em 0 0.8em 0;
+    text-align: center;
+    color: white;
+    text-transform: capitalize;
+    font-size: 1.2em;
+    font-weight: 600;
+}
+
+.character-description {
+    text-align: justify;
+    color: white;
+    line-height: 2em;
+    font-weight: 300;
+}
+
+.list {
+    position: absolute;
+    
 }
