--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ input{
 button{ 
     outline: none;
     border: none;
+    padding: 1em 0.5em;
     background-color: red;
     color: white;
     border-radius: 0.5em;
