--- a/style.css
+++ b/style.css
@@ -57,6 +57,16 @@ button{
     border-radius: 0.5em;
 }
 
+select {
+    position: relative;
+    top: 580px;
+    outline: none;
+    border: none;
+    padding: 1em 1em;
+    background-color: #171821;
+    color: white;
+    border-radius: 0.5em;
+}
 
 #display-container {
     padding: 1em ;
